amplify link upddated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         function checkServerStatus() {
           var currentTime = new Date().toLocaleTimeString();
           $.ajax({
-            url: "http://43.205.130.84/server-status",
+            url: "https://master.d5gibozj60z9h.amplifyapp.com/",
             type: "GET",
             dataType: "text",
             success: function(response) {
